Implement jquery plugin

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <section class="jqcarousel">
 
-            <h2>Carousel</h2>
+            <h2><span class="boring">Boring</span> Christmas jqery carousel</h2>
 
             <div class="jqcarousel-wrapper">
 
@@ -31,12 +31,27 @@
 
                 <figure>
                     <img alt="New year is coming" src="img/ny4.jpg">
-                    <figcaption>Looks like moon crater</figcaption>
+                    <figcaption>What a fun...</figcaption>
+                </figure>
+
+                <figure>
+                    <img alt="New year is coming" src="img/ny5.jpg">
+                    <figcaption>It is to ride...</figcaption>
+                </figure>
+
+                <figure>
+                    <img alt="New year is coming" src="img/ny6.jpg">
+                    <figcaption>In a one horse open...</figcaption>
+                </figure>
+
+                <figure>
+                    <img alt="New year is coming" src="img/ny7.jpg">
+                    <figcaption>sle-e-e-eigh!..</figcaption>
                 </figure>
 
             </div>
 
-            <div class="drivers">
+            <div class="jqcarousel-drivers">
                 <span class="left">2016</span>
                 <span class="right">2017</span>
             </div>
