--- a/index.html
+++ b/index.html
@@ -12,46 +12,52 @@
 
             <h2><span class="boring">Boring</span> Christmas jqery carousel</h2>
 
-            <div class="jqcarousel-wrapper">
+            <!-- carousel visible area -->
+            <div class="jqcarousel-container">
 
-                <figure>
-                    <img alt="New year is coming" src="img/ny1.jpg">
-                    <figcaption>Jingle bells...</figcaption>
-                </figure>
+                <!-- content of carousel -->
+                <div class="jqcarousel-content">
 
-                <figure>
-                    <img alt="New year is coming" src="img/ny2.jpg">
-                    <figcaption>Jingle bells...</figcaption>
-                </figure>
+                    <figure>
+                        <img alt="New year is coming" src="img/ny1.jpg">
+                        <figcaption>Jingle bells...</figcaption>
+                    </figure>
 
-                <figure>
-                    <img alt="New year is coming" src="img/ny3.jpg">
-                    <figcaption>Jingle all the way...</figcaption>
-                </figure>
+                    <figure>
+                        <img alt="New year is coming" src="img/ny2.jpg">
+                        <figcaption>Jingle bells...</figcaption>
+                    </figure>
 
-                <figure>
-                    <img alt="New year is coming" src="img/ny4.jpg">
-                    <figcaption>What a fun...</figcaption>
-                </figure>
+                    <figure>
+                        <img alt="New year is coming" src="img/ny3.jpg">
+                        <figcaption>Jingle all the way...</figcaption>
+                    </figure>
 
-                <figure>
-                    <img alt="New year is coming" src="img/ny5.jpg">
-                    <figcaption>It is to ride...</figcaption>
-                </figure>
+                    <figure>
+                        <img alt="New year is coming" src="img/ny4.jpg">
+                        <figcaption>What a fun...</figcaption>
+                    </figure>
 
-                <figure>
-                    <img alt="New year is coming" src="img/ny6.jpg">
-                    <figcaption>In a one horse open...</figcaption>
-                </figure>
+                    <figure>
+                        <img alt="New year is coming" src="img/ny5.jpg">
+                        <figcaption>It is to ride...</figcaption>
+                    </figure>
 
-                <figure>
-                    <img alt="New year is coming" src="img/ny7.jpg">
-                    <figcaption>sle-e-e-eigh!..</figcaption>
-                </figure>
+                    <figure>
+                        <img alt="New year is coming" src="img/ny6.jpg">
+                        <figcaption>In a one horse open...</figcaption>
+                    </figure>
 
-            </div>
+                    <figure>
+                        <img alt="New year is coming" src="img/ny7.jpg">
+                        <figcaption>sle-e-e-eigh!..</figcaption>
+                    </figure>
 
-            <div class="jqcarousel-drivers">
+                </div> <!-- end of carousel content -->
+
+            </div> <!-- /end of carousel visible area -->
+
+            <div class="jqcarousel-controls">
                 <span class="left">2016</span>
                 <span class="right">2017</span>
             </div>
