Replace shift option with num-of-slides; restyle carousel

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </section>
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-        <script src="js/mini-template.js"></script>
+        <script src="js/micro-template.js"></script>
         <script src="js/jquery.carousel.js"></script>
         <script src="js/script.js"></script>
     </body>
