Fix shift via floating slides; upd images, add readme.txt

--- a/index.html
+++ b/index.html
@@ -44,18 +44,17 @@
 
         <section class="jqcarousel" id="easter-carousel-container">
 
-            <h2>Custom Carousel</h2>
+            <h2>Easter Carousel</h2>
 
             <div class="jqcarousel-frame easter">
                 <div class="jqcarousel-content">
-                    <!-- <div> -->
-                        <figure class="easter__slide"><img alt="A bird" src="img/bird.jpg"></figure>
-                        <figure class="easter__slide"><img alt="An ear, or spica" src="img/ear.jpg"></figure>
-                        <figure class="easter__slide"><img alt="Moon on plain sky" src="img/moon.jpg"></figure>
-                        <figure class="easter__slide"><img alt="Parachute man" src="img/parachute.jpg"></figure>
-                        <figure class="easter__slide"><img alt="Looks like moon crater" src="img/crater.jpg"></figure>
-                        <figure class="easter__slide"><img alt="Urbanistic landscape" src="img/black_and_white.jpg"></figure>
-                    <!-- </div> -->
+                        <figure class="easter__slide"><img alt="Easter eggs exhibition" src="img/easter1.jpg"></figure>
+                        <figure class="easter__slide"><img alt="Easter eggs exhibition" src="img/easter2.jpg"></figure>
+                        <figure class="easter__slide"><img alt="Easter eggs exhibition" src="img/easter3.jpg"></figure>
+                        <figure class="easter__slide"><img alt="Easter eggs exhibition" src="img/easter4.jpg"></figure>
+                        <figure class="easter__slide"><img alt="Easter eggs exhibition" src="img/easter5.jpg"></figure>
+                        <figure class="easter__slide"><img alt="Easter eggs exhibition" src="img/easter6.jpg"></figure>
+                        <figure class="easter__slide"><img alt="Easter eggs exhibition" src="img/easter7.jpg"></figure>
                 </div>
 
                 <p class="jcarousel-pagination">
@@ -67,7 +66,7 @@
                 <a href="#" class="prev">&lsaquo;</a>
                 <a href="#" class="next">&rsaquo;</a>
             </div>
-            
+
         </section>
 
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
