Add pagination and fix initial left shift

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                         <% } %>
                     </div>
 
-                    <p class="jcarousel-pagination">
-                    </p>
-
                 </div>
 
                 <div class="jqcarousel-controls arrows">
                     <a href="#" class="prev">&lsaquo;</a>
                     <a href="#" class="next">&rsaquo;</a>
+                </div>
+
+                <div class="jqcarousel-pagination">
                 </div>
 
             </script>
