--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
         <section class="jqcarousel" id="NY-carousel-container">
 
-            <script type="text/template" id="NY-carousel-template">
+            <h2>Christmas Carousel</h2>
 
-                <h2><span class="boring">Boring</span> Christmas jQuery Carousel</h2>
+            <script type="text/template" id="NY-carousel-template">
 
                 <!-- carousel visible area -->
                 <div class="jqcarousel-frame new-year">
@@ -44,9 +44,9 @@
 
         <section class="jqcarousel" id="easter-carousel-container">
 
-                <script type="text/template" id="easter-carousel-template">
+            <h2>Easter Carousel</h2>
 
-                <h2>Easter Carousel</h2>
+            <script type="text/template" id="easter-carousel-template">
 
                 <div class="jqcarousel-frame easter">
                     <div class="jqcarousel-content">
