--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         </section>
 
-        <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+        <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
         <script src="js/micro-template.js"></script>
         <script src="js/jquery.carousel.js"></script>
         <script src="https://cdn.jsdelivr.net/lodash/4.17.2/lodash.min.js"></script>
